--- a/css/mainStyle.less
+++ b/css/mainStyle.less
@@ -190,9 +190,15 @@ img.firstPageTplBg {
 
 /* Interview */
 
+img.interviewPageTplBg {
+  min-width: 100%;
+  min-height: 70% !important; /* browser fill */
+  max-height: 100%;
+  height: auto; /*content fill */
+}
+
 .interviewPage {
   width: 100%;
-  padding-top: 15%;
 
   p {
     text-align:justify;
