--- a/templates/interview.handlebars
+++ b/templates/interview.handlebars
@@ -1,7 +1,10 @@
+<img src="images/Labod_small.png" class="interviewPageTplBg">
 <div class="interviewPage">
 
     <div class="bs-header">
+
         <img src="images/expand.png" id="back">
+
         <div class="container">
             <h2>Nova zgradba FRI z umetniškim pridihom</h2>
         </div>
@@ -20,6 +23,7 @@
             </div>
             <div class="col-md-6 col-sm-6 wback">
                 <div class="col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1 interviewContent">
+                    <br>
                     {{#each data.parts}}
                         <h5 id="{{@key}}">{{this.title}}</h5>
                         <br/>
