Delo na glavni strani galerije

--- a/css/mainStyle.less
+++ b/css/mainStyle.less
@@ -26,7 +26,7 @@ body, #app-content {
   .chevron{
     font-size: 400%;
     position: absolute;
-    top: calc(~'50% - 40px');
+    z-index: 10;
     display: inline-block;
   }
   .chevron:hover{
