--- a/templates/galleryBasic.handlebars
+++ b/templates/galleryBasic.handlebars
@@ -47,15 +47,15 @@
             </div>
         </div>
 
-        <div class="col-md-2 col-sm-4">
+        <div class="col-md-1 col-sm-4">
             <div class="btn-group-sm">
-                <div class="btn btn-gray" id="toggleViewType"><i class="material-icons icons">pageview</i>
+                <div class="btn btn-gray" id="toggleZoom"><i class="material-icons icons">pageview</i>
+                </div>
+                <div class="btn btn-gray" id="fullscreen">
+                    <i class="material-icons icons">fullscreen</i>
                 </div>
                 <div class="btn btn-gray">
                     <i class="material-icons icons">home</i>
-                </div>
-                <div class="btn btn-gray">
-                    <i class="material-icons icons">fullscreen</i>
                 </div>
             </div>
             <!--
