--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -22,7 +22,7 @@ body,
 .basicGalleryPage .chevron {
   font-size: 400%;
   position: absolute;
-  top: calc(50% - 40px);
+  z-index: 10;
   display: inline-block;
 }
 .basicGalleryPage .chevron:hover {
