--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -5,13 +5,26 @@ body,
   width: 100%;
   font-size: 110%;
 }
+.btn-transparent {
+  background-color: transparent !important;
+}
+.btn-transparent:hover {
+  background-color: rgba(0, 0, 0, 0.8) !important;
+  color: #ffffff;
+}
 .basicGalleryPage {
-  background-image: url("../images/backgrounds/betonZid.png");
-  background-repeat: repeat;
+  /*background-image: url("../images/backgrounds/betonZid.png");
+  background-repeat: repeat;*/
+  background-color: rgba(0, 0, 0, 0.8);
   min-height: 100vh;
 }
 .basicGalleryPage .btn-raised {
   font-size: 120%;
+}
+.basicGalleryPage .changeModeBtn {
+  position: absolute;
+  right: 0;
+  font-size: 30%;
 }
 .basicGalleryPage #topPadding {
   height: 5vh;
@@ -23,7 +36,31 @@ body,
   font-size: 400%;
   position: absolute;
   z-index: 10;
-  display: inline-block;
+}
+.basicGalleryPage .bs-header {
+  position: relative;
+  padding: 1%;
+  width: 100%;
+  color: #ffffff;
+  text-align: center;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  background-color: #dc211c;
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+  /* For IE8 and earlier */
+}
+.basicGalleryPage .bs-footer {
+  position: relative;
+  padding: 1%;
+  width: 100%;
+  color: #ffffff;
+  text-align: center;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+  /* For IE8 and earlier */
+  margin-top: 30px;
 }
 .basicGalleryPage .chevron:hover {
   cursor: pointer;
@@ -64,6 +101,9 @@ body,
 }
 .basicGalleryPage .interviewLink {
   padding: 5px 0;
+  position: absolute;
+  right: 30px;
+  top: 10px;
 }
 .basicGalleryPage .imgContainer {
   vertical-align: center;
@@ -80,13 +120,13 @@ body,
 }
 .basicGalleryPage .galleryBasicImgDescription {
   margin-top: 1vh;
-  padding: 15px;
-  background: rgba(0, 0, 0, 0.8);
-  box-shadow: 4px 5px 2px #000000;
+  padding: 5px;
   color: #ffffff;
+  text-align: center;
+  box-shadow: 4px 5px 2px #000000;
+  background: rgba(0, 0, 0, 0.8);
   border-radius: 3px;
   border: 3px solid #000000;
-  text-align: center;
 }
 .basicGalleryPage .active {
   opacity: 0.6;
@@ -205,7 +245,11 @@ img.firstPageTplBg {
   }
 }
 @media screen and (max-width: 1500px) {
-  .interviewPage .indexContainer {
-    font-size: 80%;
+  body,
+  #app-content {
+    font-size: 90%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
   }
 }
