--- a/css/mainStyle.less
+++ b/css/mainStyle.less
@@ -10,13 +10,24 @@ body, #app-content {
   width: 100%;
   font-size: 110%;
 }
-
+.btn-transparent{
+  background-color: transparent !important;
+}
+.btn-transparent:hover{
+  background-color: @transparentBlack !important;
+  color: @white;
+}
 .basicGalleryPage {
-  background-image: url("../images/backgrounds/betonZid.png");
-  background-repeat: repeat;
-
+  /*background-image: url("../images/backgrounds/betonZid.png");
+  background-repeat: repeat;*/
+  background-color: @transparentBlack;
   min-height: 100vh;
   .btn-raised{font-size: 120%};
+  .changeModeBtn{
+    position: absolute;
+    right: 0;
+    font-size: 30%;
+  }
   #topPadding{
     height: 5vh;
   }
@@ -27,7 +38,29 @@ body, #app-content {
     font-size: 400%;
     position: absolute;
     z-index: 10;
-    display: inline-block;
+  }
+  .bs-header {
+    position: relative;
+    padding: 1%;
+    width: 100%;
+    color: @white;
+    text-align: center;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, .1);
+    background-color: @indexHeaderRedColor;
+    opacity: 0.9;
+    filter: alpha(opacity=90); /* For IE8 and earlier */
+  }
+  .bs-footer {
+    position: relative;
+    padding: 1%;
+    width: 100%;
+    color: @white;
+    text-align: center;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, .1);
+    background-color: @transparentBlack;
+    opacity: 0.9;
+    filter: alpha(opacity=90); /* For IE8 and earlier */
+    margin-top: 30px;
   }
   .chevron:hover{
     cursor: pointer;
@@ -68,6 +101,10 @@ body, #app-content {
   }
   .interviewLink {
     padding: 5px 0;
+    position: absolute;
+    right: 30px;
+    top: 10px;
+
   }
   .imgContainer {
      vertical-align: center;
@@ -84,13 +121,14 @@ body, #app-content {
    }
   .galleryBasicImgDescription {
     margin-top: 1vh;
-    padding: 15px;
-    background: @transparentBlack;
-    box-shadow: 4px 5px 2px @black;
+    padding: 5px;
     color: @white;
+    text-align: center;
+
+    box-shadow: 4px 5px 2px @black;
+    background: @transparentBlack;
     border-radius: 3px;
     border:3px solid @black;
-    text-align: center;
   }
   .active {
     opacity: 0.6;
@@ -218,9 +256,13 @@ img.firstPageTplBg {
 
     }
   }
-  @media screen and (max-width: 1500px){
-    .indexContainer{
-      font-size: 80%;
-    }
+
+}
+@media screen and (max-width: 1500px){
+  body, #app-content {
+    font-size: 90%;
+    margin: 0;
+    padding: 0;
+    overflow-x:hidden;
   }
 }
