Popravil, da se zoom ugasne, dodal toggle gumbom, popravil animacije, dodal hover na gumbe naprej nazaj

--- a/css/mainStyle.less
+++ b/css/mainStyle.less
@@ -38,6 +38,7 @@ body, #app-content {
     font-size: 400%;
     position: absolute;
     z-index: 10;
+    opacity: 0;
   }
   .bs-header {
     position: relative;
