--- a/templates/galleryBasic.handlebars
+++ b/templates/galleryBasic.handlebars
@@ -27,7 +27,6 @@
                 <i class="material-icons chevron" id="prevImgBtn">chevron_left</i>
                 <img id="image"
                      src="./images/small/{{selectedImg.fileName}}.{{selectedImg.fileExt}}"
-                     data-zoom-image="./images/small/{{selectedImg.fileName}}.{{selectedImg.fileExt}}"
                      height="auto"
                      width="100%"
                 />
@@ -43,7 +42,7 @@
                 <div class="btn btn-gray" id="toggleZoom">
                     <i class="material-icons icons">pageview</i>
                 </div>
-                <div class="btn btn-gray" id="fullscreen">
+                <div class="btn btn-gray" id="fullscreenToggleBtn">
                     <i class="material-icons icons">fullscreen</i>
                 </div>
             </div>
