--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -36,6 +36,7 @@ body,
   font-size: 400%;
   position: absolute;
   z-index: 10;
+  opacity: 0;
 }
 .basicGalleryPage .bs-header {
   position: relative;
