--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -2,11 +2,13 @@
 body,
 #app-content {
   min-height: 100vh;
+  min-width: 525px;
   width: 100%;
-  font-size: 110%;
+  background-color: #e8f5e9;
 }
 .btn-transparent {
   background-color: transparent !important;
+  color: #ffffff;
 }
 .btn-transparent:hover {
   background-color: rgba(0, 0, 0, 0.8) !important;
@@ -27,7 +29,7 @@ body,
   font-size: 30%;
 }
 .basicGalleryPage #topPadding {
-  height: 5vh;
+  height: 1vh;
 }
 .basicGalleryPage .icons {
   font-size: 300%;
@@ -40,15 +42,17 @@ body,
 }
 .basicGalleryPage .bs-header {
   position: relative;
-  padding: 1%;
+  padding: 3px;
   width: 100%;
   color: #ffffff;
   text-align: center;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
   background-color: #dc211c;
   opacity: 0.9;
+  max-height: 15vh;
   filter: alpha(opacity=90);
   /* For IE8 and earlier */
+  vertical-align: middle;
 }
 .basicGalleryPage .bs-footer {
   position: relative;
@@ -65,6 +69,12 @@ body,
 }
 .basicGalleryPage .chevron:hover {
   cursor: pointer;
+}
+.basicGalleryPage #toggleZoom,
+.basicGalleryPage #fullscreenToggleBtn {
+  display: block;
+  background: none;
+  color: #ffffff;
 }
 .basicGalleryPage #image {
   cursor: pointer;
@@ -137,6 +147,13 @@ body,
   position: fixed;
   width: 100%;
   padding-top: 15%;
+  font-family: inherit;
+}
+.firstPageTpl h1 h3 {
+  font-weight: 100;
+}
+.firstPageTpl p {
+  font-weight: 100;
 }
 .firstPageTpl .bs-header {
   position: relative;
@@ -164,7 +181,7 @@ body,
 .firstPageTpl #bs-tail {
   position: relative;
   width: 100%;
-  padding: 2%;
+  max-height: 55%;
   color: #ffffff;
   background-color: #333333;
   opacity: 0.95;
@@ -191,6 +208,24 @@ body,
 }
 .firstPageTpl .btn {
   color: #ffffff;
+  line-height: 1.6;
+  min-height: 200px;
+  padding-top: 2.5%;
+  padding-bottom: 2%;
+  white-space: normal;
+  vertical-align: baseline;
+  text-transform: inherit;
+  text-align: left;
+  letter-spacing: normal;
+  margin-bottom: auto;
+  font-size: inherit;
+}
+.firstPageTpl .btn:hover {
+  background-color: #dc211c;
+  border-radius: 0;
+  opacity: 0.95;
+  filter: alpha(opacity=95);
+  /* For IE8 and earlier */
 }
 .firstPageTpl .p {
   margin-top: 5px;
@@ -217,33 +252,107 @@ img.firstPageTplBg {
   /*content fill */
 }
 /* Interview */
+img.interviewPageTplBg {
+  min-width: 100%;
+  min-height: 70% !important;
+  /* browser fill */
+  max-height: 100%;
+  height: auto;
+  /*content fill */
+}
 .interviewPage {
+  width: 100%;
   /*background-image: url("../images/backgrounds/betonZid.png");*/
+}
+.interviewPage p {
+  text-align: justify;
+  font-size: large;
+}
+.interviewPage h5 {
+  text-align: justify;
+}
+.interviewPage .bs-header {
+  position: fixed;
+  padding: 1%;
+  width: 100%;
+  color: #ffffff;
+  text-align: center;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  background-color: #dc211c;
+  z-index: 2;
+}
+.interviewPage .bback {
+  height: 200000px;
+  min-height: 100%;
+  padding-top: 7%;
+  padding-left: 2%;
+  color: #ffffff;
+  background-color: #333333;
+  opacity: 0.95;
+  filter: alpha(opacity=95);
+  /* For IE8 and earlier */
+}
+.interviewPage .bback a {
+  color: #e8f5e9;
+  font-size: medium;
+}
+.interviewPage .wback {
+  padding-top: 5%;
+  background-color: #ffffff;
+  opacity: 0.95;
+  filter: alpha(opacity=95);
+  /* For IE8 and earlier */
 }
 .interviewPage .indexContainer {
   position: fixed;
-  font-size: 80%;
+  font-size: 100%;
 }
 .interviewPage .indexContainer ul {
   list-style: none;
+  align-content: center;
 }
 .interviewPage .indexContainer ul li {
-  padding: 3px 0;
+  text-align: justify;
 }
 .interviewPage .indexContainer ul li:hover {
   cursor: pointer;
-  border-left: 3px solid #000000;
-  padding-left: 5px;
+  border-left: 5px solid #dc211c;
 }
 .interviewPage .indexContainer ul li.active {
-  padding-left: 10px;
-  border-left: 3px solid #000000 !important;
-  font-weight: bolder;
+  border-left: 5px solid #ffffff !important;
+  font-weight: 600;
+  text-decoration: none;
 }
-@media screen and (max-width: 992px) {
-  .interviewPage .indexContainer {
-    position: static;
-  }
+.interviewPage #back {
+  align-items: baseline;
+  z-index: 1;
+  margin-left: -50%;
+  position: fixed;
+  -ms-transform: rotate(90deg);
+  /* IE 9 */
+  -webkit-transform: rotate(90deg);
+  /* Chrome, Safari, Opera */
+  transform: rotate(90deg);
+}
+.interviewPage #back:hover {
+  -moz-box-shadow: 0 0 10px #ccc;
+  -webkit-box-shadow: 0 0 10px #ccc;
+  box-shadow: 0 0 10px #ccc;
+}
+.setupPage {
+  padding: 3vh;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.8);
+  margin: 0;
+}
+.setupPage img {
+  margin-right: 0;
+  height: 40vh;
+  margin: 3px 1px;
+  background: #ffffff;
+}
+.setupPage img:hover {
+  cursor: pointer;
 }
 @media screen and (max-width: 1500px) {
   body,
