--- a/templates/galleryDouble.handlebars
+++ b/templates/galleryDouble.handlebars
@@ -1,5 +1,5 @@
-<h1>galery</h1>
-<a href="./">home</a>
-<a href="./?search=ourText#interview">interju</a>
-<a href="./#test">test</a>
-<a href="./#gallery">gallery</a>
+<div class="setupPage">
+    {{#each images}}
+        <img src="./images/setup/{{this}}">
+    {{/each}}
+</div>
