--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -340,10 +340,36 @@ img.interviewPageTplBg {
   box-shadow: 0 0 10px #ccc;
 }
 .setupPage {
-  padding: 3vh;
   text-align: center;
   background: rgba(0, 0, 0, 0.8);
   margin: 0;
+  position: absolute;
+}
+.setupPage .doubleHeader {
+  position: relative;
+  width: 100%;
+  max-height: 15vh;
+  background-color: #dc211c;
+  color: #ffffff;
+  text-align: center;
+  vertical-align: middle;
+  margin-bottom: 5vh;
+}
+.setupPage .doubleFooter {
+  height: 5vh;
+  width: 100%;
+  position: relative;
+}
+.setupPage .row {
+  padding: 0;
+  margin: 0;
+}
+.setupPage .btn {
+  white-space: normal;
+  background-color: #ffffff;
+}
+.setupPage .icons {
+  font-size: 300%;
 }
 .setupPage img {
   margin-right: 0;
