Ob kliku na sliko se pojavi overlayScreen z ustrezno sliko in gumbi. Exit že dela, levo/desno še ne

--- a/css/mainStyle.less
+++ b/css/mainStyle.less
@@ -6,6 +6,7 @@
 @transparentBlack: rgba(0, 0, 0, 0.8);
 @indexHeaderRedColor: #dc211c;
 @yellow: #ECDF00;
+@overlayGray: rgba(127, 127, 127, 0.7);
 
 body, #app-content {
   min-height: 100vh;
@@ -13,32 +14,38 @@ body, #app-content {
   width: 100%;
   background-color: @lightGrey;
 }
-.btn-transparent{
+
+.btn-transparent {
   background-color: transparent !important;
   color: @white;
 }
-.btn-transparent:hover{
+
+.btn-transparent:hover {
   background-color: @transparentBlack !important;
   color: @white;
 }
+
 .basicGalleryPage {
   /*background-image: url("../images/backgrounds/betonZid.png");
   background-repeat: repeat;*/
   background-color: @transparentBlack;
   min-height: 100vh;
-  .btn-raised{font-size: 120%};
-  .changeModeBtn{
+  .btn-raised {
+    font-size: 120%
+  }
+;
+  .changeModeBtn {
     position: absolute;
     right: 0;
     font-size: 30%;
   }
-  #topPadding{
+  #topPadding {
     height: 1vh;
   }
-  .icons{
-    font-size:300%;
+  .icons {
+    font-size: 300%;
   }
-  .chevron{
+  .chevron {
     font-size: 400%;
     position: absolute;
     z-index: 10;
@@ -70,34 +77,34 @@ body, #app-content {
     filter: alpha(opacity=90); /* For IE8 and earlier */
     margin-top: 30px;
   }
-  .chevron:hover{
+  .chevron:hover {
     cursor: pointer;
   }
-  #toggleZoom,#fullscreenToggleBtn{
+  #toggleZoom, #fullscreenToggleBtn {
     display: block;
     background: none;
-    color:@white;
+    color: @white;
   }
-  #image{
-    cursor:pointer;
+  #image {
+    cursor: pointer;
   }
   .row {
     padding: 0;
     margin: 0;
   }
-  .centerFlex{
+  .centerFlex {
     display: flex;
     /*align-items: center;*/
     justify-content: center;
   }
-  .sider{
+  .sider {
     padding: 0;
-    > div{
+    > div {
       background-color: @transparentBlack;
       padding: 10px 5px;
-      border:3px solid @black;
-      border-top:none;
-      border-bottom:none;
+      border: 3px solid @black;
+      border-top: none;
+      border-bottom: none;
       border-radius: 3px;
     }
   }
@@ -120,18 +127,18 @@ body, #app-content {
 
   }
   .imgContainer {
-     vertical-align: center;
-     height: 65vh;
-     text-align: center;
-     img{
-       max-width: 100%;
-       max-height: 100%;
-       height: auto;
-       width: auto;
-       padding: 0 !important;
-       /*box-shadow: 4px 5px 2px @black;*/
-     }
-   }
+    vertical-align: center;
+    height: 65vh;
+    text-align: center;
+    img {
+      max-width: 100%;
+      max-height: 100%;
+      height: auto;
+      width: auto;
+      padding: 0 !important;
+      /*box-shadow: 4px 5px 2px @black;*/
+    }
+  }
   .galleryBasicImgDescription {
     margin-top: 1vh;
     padding: 5px;
@@ -141,7 +148,7 @@ body, #app-content {
     box-shadow: 4px 5px 2px @black;
     background: @transparentBlack;
     border-radius: 3px;
-    border:3px solid @black;
+    border: 3px solid @black;
   }
   .active {
     opacity: 0.6;
@@ -154,7 +161,6 @@ body, #app-content {
   width: 100%;
   padding-top: 15%;
   font-family: inherit;
-
 
   h1 h3 {
     font-weight: 100;
@@ -228,13 +234,13 @@ body, #app-content {
     vertical-align: baseline;
     text-transform: inherit;
     text-align: left;
-    letter-spacing:  normal;
+    letter-spacing: normal;
     margin-bottom: auto;
     font-size: inherit;
   }
 
   .btn:hover {
-    background-color:  @indexHeaderRedColor;//@yellow;
+    background-color: @indexHeaderRedColor; //@yellow;
     border-radius: 0;
     opacity: 0.95;
     filter: alpha(opacity=95); /* For IE8 and earlier */
@@ -278,12 +284,12 @@ img.interviewPageTplBg {
   width: 100%;
 
   p {
-    text-align:justify;
+    text-align: justify;
     font-size: large;
   }
 
   h5 {
-    text-align:justify;
+    text-align: justify;
   }
 
   .bs-header {
@@ -321,10 +327,9 @@ img.interviewPageTplBg {
     filter: alpha(opacity=95); /* For IE8 and earlier */
   }
 
-
   /*background-image: url("../images/backgrounds/betonZid.png");*/
-  .indexContainer{
-    position:fixed;
+  .indexContainer {
+    position: fixed;
     font-size: 100%;
 
     ul {
@@ -332,14 +337,14 @@ img.interviewPageTplBg {
       align-content: center;
 
       li {
-        text-align:justify;
+        text-align: justify;
       }
 
-      li:hover{
+      li:hover {
         cursor: pointer;
         border-left: 5px solid @indexHeaderRedColor;
       }
-      li.active{
+      li.active {
         border-left: 5px solid @white !important;
         font-weight: 600;
         text-decoration: none;
@@ -363,15 +368,16 @@ img.interviewPageTplBg {
     box-shadow: 0 0 10px #ccc;
   }
 }
+
 //setup gallery page named galleryDouble.handlebars
-.setupPage{
+.setupPage {
 
   text-align: center;
   background: @transparentBlack;
-  margin:0;
-  position: absolute;
+  margin: 0;
+  position: relative;
 
-  .doubleHeader{
+  .doubleHeader {
     position: relative;
     width: 100%;
     max-height: 15vh;
@@ -380,13 +386,88 @@ img.interviewPageTplBg {
     text-align: center;
     vertical-align: middle;
     margin-bottom: 5vh;
-    //padding:3px;
+    padding: 3px;
+
+    #container:after {
+      bottom: -20px;
+    }
+
+    #container {
+      text-align: center;
+    }
   }
 
-  .doubleFooter{
+  .spaceRow {
     height: 5vh;
     width: 100%;
-    position: relative;
+    position: absolute;
+    background-color: @transparentBlack;
+  }
+
+  .doubleFooter {
+    height: 5vh;
+    width: 100%;
+    position: absolute;
+  }
+
+  .overlayScreen {
+    position: fixed;
+    width: 90vw;
+    height: 90vh;
+    background-color: @overlayGray;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    //text-align: center;
+
+    img {
+      background: @white;
+      display: block;
+      height: 75% !important;
+      width: auto;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+      align-self:center;
+      position:absolute;
+    }
+
+
+    .leftRight {
+      font-size: 400%;
+      position: relative;
+      z-index: 10;
+      float:left;
+      top: 80vh;
+      bottom: 0;
+      left: 80vh;
+      right: 0;
+      margin: auto;
+      //padding-left: 5vw;
+      //opacity: 0;
+
+    }
+
+    .btnExit {
+      //display:flex;
+      white-space: normal;
+      position: relative;
+      background-color: @white;
+      max-height: 10vh;
+      max-width: 10vh;
+      float:right;
+    }
+
+  }
+
+  .centerFlex {
+    display: flex;
+    /*align-items: center;*/
+    justify-content: center;
   }
 
   .row {
@@ -397,31 +478,31 @@ img.interviewPageTplBg {
   .btn {
     white-space: normal;
     background-color: @white;
+    max-height: 10vh;
+    //margin-right: 0;
   }
 
-  .icons{
-    font-size:300%;
+  .icons {
+    font-size: 300%;
   }
 
-  img{
-    margin-right:0;
+  img {
+    margin-right: 0;
     height: 40vh;
     margin: 3px 1px;
     background: @white;
   }
-  img:hover{
+  img:hover {
     cursor: pointer;
   }
 }
 
-
-
-@media screen and (max-width: 1500px){
+@media screen and (max-width: 1500px) {
   body, #app-content {
     font-size: 90%;
     margin: 0;
     padding: 0;
-    overflow-x:hidden;
+    overflow-x: hidden;
   }
 }
 
