--- a/templates/fullscreen.handlebars
+++ b/templates/fullscreen.handlebars
@@ -64,7 +64,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="./#galleryBasic">
+                    <a href="./#galleryDouble">
                         <div class="col-md-3 col-sm-6 col-xs-6 btn">
                             <div class="service-wrapper" style="padding-left: 5%">
                                 <h3>Postavljanje slik</h3>
