--- a/templates/galleryDouble.handlebars
+++ b/templates/galleryDouble.handlebars
@@ -11,8 +11,14 @@
             </div>
         </div>
     </div>
+    <div class="overlayScreen">
+        <i class="material-icons icons btn btnExit btn-transparent" id="exitButton">clear</i>
+        <img src="./images/setup/DSC04352.jpg" id="shownImage"/>
+        <i class="material-icons icons btn btn-transparent leftRight ">chevron_left</i>
+        <i class="material-icons icons btn btn-transparent leftRight ">chevron_right</i>
+
+    </div>
     {{#each images}}
-        <img src="./images/setup/{{this}}" id="setupImage">
+        <img src="./images/setup/{{this}}" class="setupImage">
     {{/each}}
-    <div class="doubleFooter"></div>
 </div>
