--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -343,7 +343,7 @@ img.interviewPageTplBg {
   text-align: center;
   background: rgba(0, 0, 0, 0.8);
   margin: 0;
-  position: absolute;
+  position: relative;
 }
 .setupPage .doubleHeader {
   position: relative;
@@ -354,11 +354,72 @@ img.interviewPageTplBg {
   text-align: center;
   vertical-align: middle;
   margin-bottom: 5vh;
+  padding: 3px;
+}
+.setupPage .doubleHeader #container:after {
+  bottom: -20px;
+}
+.setupPage .doubleHeader #container {
+  text-align: center;
+}
+.setupPage .spaceRow {
+  height: 5vh;
+  width: 100%;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 .setupPage .doubleFooter {
   height: 5vh;
   width: 100%;
+  position: absolute;
+}
+.setupPage .overlayScreen {
+  position: fixed;
+  width: 90vw;
+  height: 90vh;
+  background-color: rgba(127, 127, 127, 0.7);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+.setupPage .overlayScreen img {
+  background: #ffffff;
+  display: block;
+  height: 75% !important;
+  width: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  align-self: center;
+  position: absolute;
+}
+.setupPage .overlayScreen .leftRight {
+  font-size: 400%;
   position: relative;
+  z-index: 10;
+  float: left;
+  top: 80vh;
+  bottom: 0;
+  left: 80vh;
+  right: 0;
+  margin: auto;
+}
+.setupPage .overlayScreen .btnExit {
+  white-space: normal;
+  position: relative;
+  background-color: #ffffff;
+  max-height: 10vh;
+  max-width: 10vh;
+  float: right;
+}
+.setupPage .centerFlex {
+  display: flex;
+  /*align-items: center;*/
+  justify-content: center;
 }
 .setupPage .row {
   padding: 0;
@@ -367,6 +428,7 @@ img.interviewPageTplBg {
 .setupPage .btn {
   white-space: normal;
   background-color: #ffffff;
+  max-height: 10vh;
 }
 .setupPage .icons {
   font-size: 300%;
