--- a/css/mainStyle.less
+++ b/css/mainStyle.less
@@ -408,6 +408,7 @@ img.interviewPageTplBg {
     height: 5vh;
     width: 100%;
     position: absolute;
+    background-color: @transparentBlack;
   }
 
   .overlayScreen {
@@ -440,7 +441,8 @@ img.interviewPageTplBg {
     .leftRight {
       font-size: 400%;
       position: relative;
-      z-index: 10;
+      max-width:10vh;
+      z-index: 11;
       float:left;
       top: 80vh;
       bottom: 0;
@@ -451,6 +453,8 @@ img.interviewPageTplBg {
       //opacity: 0;
 
     }
+
+
 
     .btnExit {
       //display:flex;
