--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -6,8 +6,78 @@ body,
   width: 100%;
   background-color: #e8f5e9;
 }
+.btn-transparent {
+  background-color: transparent !important;
+  color: #ffffff;
+}
+.btn-transparent:hover {
+  background-color: rgba(0, 0, 0, 0.8) !important;
+  color: #ffffff;
+}
 .basicGalleryPage {
+  /*background-image: url("../images/backgrounds/betonZid.png");
+  background-repeat: repeat;*/
+  background-color: rgba(0, 0, 0, 0.8);
   min-height: 100vh;
+}
+.basicGalleryPage .btn-raised {
+  font-size: 120%;
+}
+.basicGalleryPage .changeModeBtn {
+  position: absolute;
+  right: 0;
+  font-size: 30%;
+}
+.basicGalleryPage #topPadding {
+  height: 1vh;
+}
+.basicGalleryPage .icons {
+  font-size: 300%;
+}
+.basicGalleryPage .chevron {
+  font-size: 400%;
+  position: absolute;
+  z-index: 10;
+  opacity: 0;
+}
+.basicGalleryPage .bs-header {
+  position: relative;
+  padding: 3px;
+  width: 100%;
+  color: #ffffff;
+  text-align: center;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  background-color: #dc211c;
+  opacity: 0.9;
+  max-height: 15vh;
+  filter: alpha(opacity=90);
+  /* For IE8 and earlier */
+  vertical-align: middle;
+}
+.basicGalleryPage .bs-footer {
+  position: relative;
+  padding: 1%;
+  width: 100%;
+  color: #ffffff;
+  text-align: center;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+  /* For IE8 and earlier */
+  margin-top: 30px;
+}
+.basicGalleryPage .chevron:hover {
+  cursor: pointer;
+}
+.basicGalleryPage #toggleZoom,
+.basicGalleryPage #fullscreenToggleBtn {
+  display: block;
+  background: none;
+  color: #ffffff;
+}
+.basicGalleryPage #image {
+  cursor: pointer;
 }
 .basicGalleryPage .row {
   padding: 0;
@@ -42,28 +112,32 @@ body,
 }
 .basicGalleryPage .interviewLink {
   padding: 5px 0;
+  position: absolute;
+  right: 30px;
+  top: 10px;
 }
 .basicGalleryPage .imgContainer {
-  height: 50vh;
+  vertical-align: center;
+  height: 65vh;
   text-align: center;
 }
 .basicGalleryPage .imgContainer img {
-  height: auto;
-  width: auto;
   max-width: 100%;
   max-height: 100%;
+  height: auto;
+  width: auto;
   padding: 0 !important;
   /*box-shadow: 4px 5px 2px @black;*/
 }
 .basicGalleryPage .galleryBasicImgDescription {
   margin-top: 1vh;
-  padding: 15px;
-  background: rgba(0, 0, 0, 0.8);
-  box-shadow: 4px 5px 2px #000000;
+  padding: 5px;
   color: #ffffff;
+  text-align: center;
+  box-shadow: 4px 5px 2px #000000;
+  background: rgba(0, 0, 0, 0.8);
   border-radius: 3px;
   border: 3px solid #000000;
-  text-align: center;
 }
 .basicGalleryPage .active {
   opacity: 0.6;
@@ -147,7 +221,8 @@ body,
   font-size: inherit;
 }
 .firstPageTpl .btn:hover {
-  background-color: #ECDF00;
+  background-color: #dc211c;
+  border-radius: 0;
   opacity: 0.95;
   filter: alpha(opacity=95);
   /* For IE8 and earlier */
@@ -210,7 +285,6 @@ img.interviewPageTplBg {
   height: 200000px;
   min-height: 100%;
   padding-top: 7%;
-  padding-left: 2%;
   color: #ffffff;
   background-color: #333333;
   opacity: 0.95;
@@ -220,6 +294,12 @@ img.interviewPageTplBg {
 .interviewPage .bback a {
   color: #e8f5e9;
   font-size: medium;
+}
+.interviewPage .qstion {
+  padding-top: 10px;
+  margin-left: 7%;
+  padding-left: 1%;
+  padding-right: 7%;
 }
 .interviewPage .wback {
   padding-top: 5%;
@@ -244,9 +324,11 @@ img.interviewPageTplBg {
   border-left: 5px solid #dc211c;
 }
 .interviewPage .indexContainer ul li.active {
-  border-left: 5px solid #ffffff !important;
-  font-weight: 600;
+  background-color: #ffffff;
   text-decoration: none;
+}
+.interviewPage .indexContainer ul li.active a {
+  color: #333333;
 }
 .interviewPage #back {
   align-items: baseline;
@@ -263,4 +345,28 @@ img.interviewPageTplBg {
   -moz-box-shadow: 0 0 10px #ccc;
   -webkit-box-shadow: 0 0 10px #ccc;
   box-shadow: 0 0 10px #ccc;
+}
+.setupPage {
+  padding: 3vh;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.8);
+  margin: 0;
+}
+.setupPage img {
+  margin-right: 0;
+  height: 40vh;
+  margin: 3px 1px;
+  background: #ffffff;
+}
+.setupPage img:hover {
+  cursor: pointer;
+}
+@media screen and (max-width: 1500px) {
+  body,
+  #app-content {
+    font-size: 90%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
 }
