--- a/templates/interview.handlebars
+++ b/templates/interview.handlebars
@@ -1,4 +1,3 @@
-<img src="images/Labod_small.png" class="interviewPageTplBg">
 <div class="interviewPage">
 
     <div class="bs-header">
@@ -13,10 +12,10 @@
     <div class="row" id="itw">
         <div class="col-md-12 col-sm-12">
             <div class="col-md-6 col-sm-6 bback">
-                <div class="col-md-5 indexContainer">
+                <div class="col-md-6 indexContainer">
                     <ul>
                         {{#each data.parts}}
-                            <li><a href="#{{@key}}" >{{this.title}}</a></li>
+                            <li class="qstion"><a href="#{{@key}}">{{this.title}}</a></li>
                         {{/each}}
                     </ul>
                 </div>
@@ -33,4 +32,5 @@
             </div>
         </div>
     </div>
+
 </div>
