Odzivnost intervjuja na pozicijo na ekranu

--- a/css/mainStyle.less
+++ b/css/mainStyle.less
@@ -12,7 +12,7 @@ body, #app-content {
   min-height: 100vh;
   min-width: 525px;
   width: 100%;
-  background-color: @lightGrey;
+  background-color: @white;
 }
 
 .btn-transparent {
@@ -50,6 +50,7 @@ body, #app-content {
     position: absolute;
     z-index: 10;
     opacity: 0;
+    color: @white;
   }
   .bs-header {
     position: relative;
@@ -142,14 +143,9 @@ body, #app-content {
   }
   .galleryBasicImgDescription {
     margin-top: 1vh;
-    padding: 5px;
     color: @white;
     text-align: center;
-
-    box-shadow: 4px 5px 2px @black;
     background: @transparentBlack;
-    border-radius: 3px;
-    border:3px solid @black;
   }
   .active {
     opacity: 0.6;
@@ -283,6 +279,7 @@ img.interviewPageTplBg {
 
 .interviewPage {
   width: 100%;
+  background-color: @white;
 
   p {
     text-align: justify;
@@ -305,9 +302,11 @@ img.interviewPageTplBg {
   }
 
   .bback {
-    height: 200000px;
-    min-height: 100%;
+    position: fixed;
+    padding: 0;
+    height: 100vh;
     padding-top: 7%;
+    margin-left: -2vh;
     color: @white;
     background-color: @niceGray;
     opacity: 0.95;
@@ -322,49 +321,50 @@ img.interviewPageTplBg {
 
   .qstion {
     padding-top: 10px;
-    margin-left: 7%;
-    padding-left: 1%;
-    padding-right: 7%;
+    padding-left: 10%;
+    padding-right: 50%;
   }
 
   .wback {
-    padding-top: 5%;
+    padding: 0;
+    padding-top: 7%;
     background-color: @white;
     opacity: 0.95;
     filter: alpha(opacity=95); /* For IE8 and earlier */
   }
 
-
-  /*background-image: url("../images/backgrounds/betonZid.png");*/
-  .indexContainer {
+  .fixed {
     position: fixed;
-    font-size: 100%;
-
-    ul {
-      list-style: none;
-      align-content: center;
-
-      li {
-        text-align: justify;
-      }
-
-      li:hover {
-        cursor: pointer;
-        border-left: 5px solid @indexHeaderRedColor;
-      }
-      li.active {
-        background-color: @white;
-      }
-
-      li.active {
-        border-left: 5px solid @white !important;
-        a {
-          color: @niceGray;
-        }
-      }
-    }
-
   }
+
+  /* sidebar */
+  .bs-docs-sidebar {
+    font-size: 100%;
+  }
+
+  .bs-docs-sidebar .nav>li>a{
+    padding-right: 15%;
+  }
+
+  /* active*/
+  .bs-docs-sidebar .nav>li>a:hover,
+  .bs-docs-sidebar .nav>.active>a {
+    color: @niceGray;
+    text-decoration: none;
+    background-color: @white;
+    border-right-color: @white;
+  }
+
+  .bs-docs-sidebar .nav>li{
+    text-align: inherit;
+  }
+
+  .bs-docs-sidebar .nav>li>a:hover{
+    cursor: pointer;
+    border-left: 3px solid @indexHeaderRedColor;
+  }
+
+
 
   #back {
     align-items: baseline;
@@ -524,6 +524,7 @@ img.interviewPageTplBg {
   img:hover {
     cursor: pointer;
   }
+
 }
 
 
