--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -4,7 +4,7 @@ body,
   min-height: 100vh;
   min-width: 525px;
   width: 100%;
-  background-color: #e8f5e9;
+  background-color: #ffffff;
 }
 .btn-transparent {
   background-color: transparent !important;
@@ -39,6 +39,7 @@ body,
   position: absolute;
   z-index: 10;
   opacity: 0;
+  color: #ffffff;
 }
 .basicGalleryPage .bs-header {
   position: relative;
@@ -131,13 +132,9 @@ body,
 }
 .basicGalleryPage .galleryBasicImgDescription {
   margin-top: 1vh;
-  padding: 5px;
   color: #ffffff;
   text-align: center;
-  box-shadow: 4px 5px 2px #000000;
   background: rgba(0, 0, 0, 0.8);
-  border-radius: 3px;
-  border: 3px solid #000000;
 }
 .basicGalleryPage .active {
   opacity: 0.6;
@@ -262,7 +259,9 @@ img.interviewPageTplBg {
 }
 .interviewPage {
   width: 100%;
-  /*background-image: url("../images/backgrounds/betonZid.png");*/
+  background-color: #ffffff;
+  /* sidebar */
+  /* active*/
 }
 .interviewPage p {
   text-align: justify;
@@ -282,9 +281,11 @@ img.interviewPageTplBg {
   z-index: 2;
 }
 .interviewPage .bback {
-  height: 200000px;
-  min-height: 100%;
+  position: fixed;
+  padding: 0;
+  height: 100vh;
   padding-top: 7%;
+  margin-left: -2vh;
   color: #ffffff;
   background-color: #333333;
   opacity: 0.95;
@@ -297,40 +298,39 @@ img.interviewPageTplBg {
 }
 .interviewPage .qstion {
   padding-top: 10px;
-  margin-left: 7%;
-  padding-left: 1%;
-  padding-right: 7%;
+  padding-left: 10%;
+  padding-right: 50%;
 }
 .interviewPage .wback {
-  padding-top: 5%;
+  padding: 0;
+  padding-top: 7%;
   background-color: #ffffff;
   opacity: 0.95;
   filter: alpha(opacity=95);
   /* For IE8 and earlier */
 }
-.interviewPage .indexContainer {
+.interviewPage .fixed {
   position: fixed;
+}
+.interviewPage .bs-docs-sidebar {
   font-size: 100%;
 }
-.interviewPage .indexContainer ul {
-  list-style: none;
-  align-content: center;
+.interviewPage .bs-docs-sidebar .nav > li > a {
+  padding-right: 15%;
 }
-.interviewPage .indexContainer ul li {
-  text-align: justify;
-}
-.interviewPage .indexContainer ul li:hover {
-  cursor: pointer;
-  border-left: 5px solid #dc211c;
-}
-.interviewPage .indexContainer ul li.active {
-  background-color: #ffffff;
-}
-.interviewPage .indexContainer ul li.active {
-  border-left: 5px solid #ffffff !important;
-}
-.interviewPage .indexContainer ul li.active a {
+.interviewPage .bs-docs-sidebar .nav > li > a:hover,
+.interviewPage .bs-docs-sidebar .nav > .active > a {
   color: #333333;
+  text-decoration: none;
+  background-color: #ffffff;
+  border-right-color: #ffffff;
+}
+.interviewPage .bs-docs-sidebar .nav > li {
+  text-align: inherit;
+}
+.interviewPage .bs-docs-sidebar .nav > li > a:hover {
+  cursor: pointer;
+  border-left: 3px solid #dc211c;
 }
 .interviewPage #back {
   align-items: baseline;
