--- a/templates/fullscreen.handlebars
+++ b/templates/fullscreen.handlebars
@@ -9,8 +9,8 @@
 -->
     <div class="bs-header">
         <div class="container">
-            <h1>Razstava slik mag. Mirana Eriča</h1>
-            <h4>na Fakulteti za računalništvo in informatiko</h4>
+            <h2>Razstava slik mag. Mirana Eriča</h2>
+            <h5>na Fakulteti za računalništvo in informatiko</h5>
         </div>
     </div>
 
@@ -44,14 +44,14 @@
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="col-md-3 col-sm-6 col-xs-6 btn">
                         <div id="detail" class="service-wrapper" style="padding-left: 5%">
-                            <h3>mag. Miran Erič</h3>
+                            <h4 style="padding-bottom: 10px">mag. Miran Erič</h4>
                             <p>Preberite si življenjepis in povezanost akademskega slikarja mag. Mirana Eriča z našo fakulteto.</p>
                         </div>
                     </div>
                     <a href="./#interview">
                         <div class="col-md-3 col-sm-6 col-xs-6 btn">
                             <div class="service-wrapper" style="padding-left: 5%">
-                                <h3>Intervju</h3>
+                                <h4 style="padding-bottom: 10px">Intervju</h4>
                                 <p>Z mag. Miranom Eričem smo se pogovarjali o njegovem delu in vključitvi svojih del v našo novo stavbo.</p>
                             </div>
                         </div>
@@ -59,7 +59,7 @@
                     <a href="./#galleryBasic">
                         <div class="col-md-3 col-sm-6 col-xs-6 btn">
                             <div class="service-wrapper" style="padding-left: 5%">
-                                <h3>Galerija slik</h3>
+                                <h4 style="padding-bottom: 10px">Galerija slik</h4>
                                 <p>Akademski slikar je fakulteti podaril svoja umetniška dela, ki novi zgradbi dodajo pridih značilen za galerijske prostore.</p>
                             </div>
                         </div>
@@ -67,7 +67,7 @@
                     <a href="./#galleryDouble">
                         <div class="col-md-3 col-sm-6 col-xs-6 btn">
                             <div class="service-wrapper" style="padding-left: 5%">
-                                <h3>Postavljanje slik</h3>
+                                <h4 style="padding-bottom: 10px">Postavljanje slik</h4>
                                 <p>Akademski slikar je fakulteti podaril svoja umetniška dela, ki novi zgradbi dodajo pridih značilen za galerijske prostore.</p>
                             </div>
                         </div>
