--- a/templates/interview.handlebars
+++ b/templates/interview.handlebars
@@ -1,11 +1,15 @@
 <div class="interviewPage">
 
     <div class="bs-header">
-
-        <img src="images/expand.png" id="back">
-
-        <div class="container">
-            <h2>Nova zgradba FRI z umetniškim pridihom</h2>
+        <div class="row">
+            <div class="col-md-1 col-sm-1" style="padding-top:5px">
+                <a href="./" class="btn btn-transparent">
+                    <i class="material-icons icons">home</i>
+                </a>
+            </div>
+            <div class="col-md-10 col-sm-10" style="padding-top:10px">
+                <h4>Nova zgradba FRI z umetniškim pridihom</h4>
+            </div>
         </div>
     </div>
 
@@ -25,12 +29,14 @@
             </div>
         </div>
         <div class="col-md-6 col-sm-6 wback">
-            <div class="col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1 interviewContent">
+            <div class="col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2 interviewContent">
+                <br>
                 <br>
                 {{#each data.parts}}
                     <section  id="{{@key}}">
                         <h5>{{this.title}}</h5>
-                        <br/>
+                        <br>
+                        <br>
                         <p>{{{this.content}}}</p>
                     </section>
                 {{/each}}
