--- a/css/mainStyle.less
+++ b/css/mainStyle.less
@@ -154,7 +154,7 @@ body, #app-content {
 .firstPageTpl {
   position: fixed;
   width: 100%;
-  padding-top: 15%;
+  padding-top: 12%;
   font-family: inherit;
 
   h1 h3 {
@@ -162,7 +162,8 @@ body, #app-content {
   }
 
   p {
-    font-weight: 50;
+    font-weight: lighter;
+    font-size: 95%;
   }
 
   .bs-header {
